<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/common_title"
        layout="@layout/common_activity_menu" />


    <View style="@style/normal_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/text_china_phone"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <so.bubu.lib.wiget.ClearEditText
                    android:id="@+id/edt_phone_num"
                    style="@style/editText"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/white"
                    android:hint="@string/input_phone"
                    android:textColorHint="@color/color_999999"
                    android:textSize="14sp" />
            </LinearLayout>

            <View style="@style/normal_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <so.bubu.lib.wiget.ClearEditText
                    android:id="@+id/edt_code"
                    style="@style/editText"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:hint="@string/input_code"
                    android:paddingLeft="0dp"
                    android:textColorHint="@color/color_999999"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/btn_code"
                    style="@style/editText"
                    android:layout_height="44dp"
                    android:layout_marginLeft="22dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:text="@string/get_sms_code"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

            <View style="@style/normal_line" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_submit"
            style="@style/buttonStart"
            android:layout_marginTop="44dp"
            android:background="@drawable/change_pwd_radius_button_background"
            android:text="@string/submit"
            android:textColor="@android:color/white" />

    </LinearLayout>


</LinearLayout>